Glibified. g_array_free which returns a char* ! If you want to change

* proclist.c: (glibtop_get_proclist_s): Glibified. g_array_free which
	returns a char* ! If you want to change this, please tell them
	http://bugzilla.gnome.org/show_bug.cgi?id=145767 .